	PR c++/44808 	* gimplify.c (gimplify_modify_expr): Only SET_DECL_DEBUG_EXPR if 	*from_p is VAR_DECL.

* g++.dg/opt/nrv16.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@161838 138bc75d-0d04-0410-961f-82ee72b054a4